<resources>
    <string name="app_name">The Converter</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="speed_fragment_label">Speed Fragment</string>
    <string name="temperature_fragment_label">Temperature Fragment</string>
    <string name="area_fragment_label">Area Fragment</string>
    <string name="distance_fragment_label">Distance Fragment</string>
    <string name="energy_fragment_label">Energy Fragment</string>
    <string name="time_fragment_label">Time Fragment</string>
    <string name="time_zone_fragment_label">Time-Zone Fragment</string>
    <string name="textView_history_heading_text">History</string>
    <string name="kmh_textView_text">Km/h</string>
    <string name="ms_textView_text">m/s</string>
    <string name="mph_textView_text">mph</string>
    <string name="fts_textView_text">ft/s</string>
    <string name="kn_textView_text">Knots</string>
    <string name="celsius_textView_text">Celsius</string>
    <string name="fahrenheit_textView_text">Fahrenheit</string>
    <string name="kelvin_textView_text">Kelvin</string>
    <string name="km_area_textView_text">Square kilometre</string>
    <string name="hectares_area_textView_text">Hectares</string>
    <string name="ar_area_textView_text">Ar</string>
    <string name="m_area_textView_text">Square meters</string>
    <string name="dm_area_textView_text">Square decimeter</string>
    <string name="cm_area_textView_text">Square centimeters</string>
    <string name="mm_area_textView_text">Square millimeters</string>
    <string name="miles_area_textView_text">Square miles</string>
    <string name="km_distance_textView_text">Kilometre</string>
    <string name="m_distance_textView_text">Meters</string>
    <string name="dm_distance_textView_text">Decimeters</string>
    <string name="cm_distance_textView_text">Centimeters</string>
    <string name="mm_distance_textView_text">Millimeters</string>
    <string name="miles_distance_textView_text">Miles</string>
    <string name="yard_distance_textView_text">Yard</string>
    <string name="foot_distance_textView_text">Foot</string>
    <string name="seaMile_distance_textView_text">Sea miles</string>
    <string name="inch_distance_textView_text">Inches</string>
    <string name="day_time_textView_text">Days</string>
    <string name="hour_time_textView_text">Hours</string>
    <string name="minute_time_textView_text">Minutes</string>
    <string name="second_time_textView_text">Seconds</string>
    <string name="millisecond_time_textView_text">Milliseconds</string>
    <string name="joule_energy_textView_text">Joule</string>
    <string name="kilojoule_energy_textView_text">Kilojoule</string>
    <string name="calorie_energy_textView_text">Calorie</string>
    <string name="kilocalorie_energy_textView_text">Kilocalorie</string>
    <string name="watt_hour_energy_textView_text">Watt-hour</string>
    <string name="kilowatt_hour_energy_textView_text">Kilowatt-hour</string>
    <string name="british_thermal_unit_energy_textView_text">British thermal unit</string>
    <string name="foot_pound_energy_textView_text">Foot-pound</string>
    <string name="cubic_meter_volume_textView_text">Cubic meter</string>
    <string name="liter_volume_textView_text">Liter / Cubic decimeter</string>
    <string name="cubic_centimeter_volume_textView_text">Cubic centimeter</string>
    <string name="milliliter_volume_textView_text">Milliliter / Cubic millimeter</string>
    <string name="cubic_foot_volume_textView_text">Cubic foot</string>
    <string name="cubic_inch_volume_textView_text">Cubic inch</string>
    <string name="cubic_yard_textView_text">Cubic Yard</string>
    <string name="us_dry_gallon_volume_textView_text">US dry gallon</string>
    <string name="us_liquid_gallon_volume_textView_text">US liquid gallon</string>
    <string name="us_dry_quart_volume_textView_text">Us dry quart</string>
    <string name="us_liquid_quart_volume_textView_text">Us liquid quart</string>
    <string name="us_dry_pint_volume_textView_text">Us dry pint</string>
    <string name="us_liquid_pint_volume_textView_text">Us liquid pint</string>
    <string name="utc_min12_time_zones_textView_text">UTC-12</string>
    <string name="utc_min11_time_zones_textView_text">UTC-11</string>
    <string name="utc_min10_time_zones_textView_text">UTC-10</string>
    <string name="utc_min9_30_time_zones_textView_text">UTC-9:30</string>
    <string name="utc_min9_time_zones_textView_text">UTC-9</string>
    <string name="utc_min8_time_zones_textView_text">UTC-8</string>
    <string name="utc_min7_time_zones_textView_text">UTC-7</string>
    <string name="utc_min6_time_zones_textView_text">UTC-6</string>
    <string name="utc_min5_time_zones_textView_text">UTC-5</string>
    <string name="utc_min4_time_zones_textView_text">UTC-4</string>
    <string name="utc_min3_time_zones_textView_text">UTC-3</string>
    <string name="utc_min2_30_time_zones_textView_text">UTC-2:30</string>
    <string name="utc_min2_time_zones_textView_text">UTC-2</string>
    <string name="utc_min1_time_zones_textView_text">UTC-1</string>
    <string name="utc_pl0_time_zones_textView_text">UTC+0</string>
    <string name="utc_pl1_time_zones_textView_text">UTC+1</string>
    <string name="utc_pl2_time_zones_textView_text">UTC+2</string>
    <string name="utc_pl3_time_zones_textView_text">UTC+3</string>
    <string name="utc_pl4_time_zones_textView_text">UTC+4</string>
    <string name="utc_pl4_30_time_zones_textView_text">UTC+4:30</string>
    <string name="utc_pl5_time_zones_textView_text">UTC+5</string>
    <string name="utc_pl5_30_time_zones_textView_text">UTC+5:30</string>
    <string name="utc_pl5_45_time_zones_textView_text">UTC+5:45</string>
    <string name="utc_pl6_time_zones_textView_text">UTC+6</string>
    <string name="utc_pl6_30_time_zones_textView_text">UTC+6:30</string>
    <string name="utc_pl7_time_zones_textView_text">UTC+7</string>
    <string name="utc_pl8_time_zones_textView_text">UTC+8</string>
    <string name="utc_pl8_45_time_zones_textView_text">UTC+8:45</string>
    <string name="utc_pl9_time_zones_textView_text">UTC+9</string>
    <string name="utc_pl9_30_time_zones_textView_text">UTC+9:30</string>
    <string name="utc_pl10_time_zones_textView_text">UTC+10</string>
    <string name="utc_pl10_30_time_zones_textView_text">UTC+10:30</string>
    <string name="utc_pl11_time_zones_textView_text">UTC+11</string>
    <string name="utc_pl12_time_zones_textView_text">UTC+12</string>
    <string name="utc_pl12_45_time_zones_textView_text">UTC+12:45</string>
    <string name="utc_pl13_time_zones_textView_text">UTC+13</string>
    <string name="utc_pl14_time_zones_textView_text">UTC+14</string>
    <string name="bar_pressure_textView_text">Bar</string>
    <string name="pascal_pressure_textView_text">Pascal</string>
    <string name="torr_pressure_textView_text">Torr</string>
    <string name="pound_per_square_inch_pressure_textView_text">Pound per square inch</string>
    <string name="technical_atmosphere_pressure_textView_text">Technical atmosphere</string>
    <string name="standard_atmosphere_pressure_textView_text">Standard atmosphere</string>
    <string name="credits_heading_textView_text">Credits</string>
    <string name="credits_us_textView_text">We (Bence, Elias, Sebastian) are students at the HTBLA Leonding and this is our first project at this school.
    If you want to see the source-code of this app click the following link: <a href="https://github.com/The-Converter/The-Converter">https://github.com/The-Converter/The-Converter</a></string>
    <string name="credits_extern_textView_text">We used a small library called \"mXparser\" which helped us parse quiet difficult calculations from the resources.
    To see its license and/or source-code click the following link: <a href="https://github.com/mariuszgromada/MathParser.org-mXparser/blob/master/LICENSE.txt">https://github.com/mariuszgromada/MathParser.org-mXparser/blob/master/LICENSE.txt</a></string>
    <string name="km_area_editText">km²</string>
    <string name="hectares_area_editText">ha</string>
    <string name="ar_area_editText">a</string>
    <string name="m_area_editText">m²</string>
    <string name="dm_area_editText">dm²</string>
    <string name="cm_area_editText">cm²</string>
    <string name="mm_area_editText">mm²</string>
    <string name="miles_area_editText">mi²</string>
    <string name="km_distance_editText">km</string>
    <string name="m_distance_editText">m</string>
    <string name="dm_distance_editText">dm</string>
    <string name="cm_distance_editText">cm</string>
    <string name="mm_distance_editText">mm</string>
    <string name="miles_distance_editText">mi</string>
    <string name="yard_distance_editText">yd</string>
    <string name="foot_distance_editText">ft</string>
    <string name="seaMile_distance_editText">sm</string>
    <string name="inch_distance_editText">in</string>
    <string name="day_time_editText">d</string>
    <string name="hour_time_editText">h</string>
    <string name="minute_time_editText">min</string>
    <string name="second_time_editText">sec</string>
    <string name="millisecond_time_editText">ms</string>
    <string name="utc_min12_time_zones_editText_text">UTC-12</string>
    <string name="utc_min11_time_zones_editText_text">UTC-11</string>
    <string name="utc_min10_time_zones_editText_text">UTC-10</string>
    <string name="utc_min9_30_time_zones_editText_text">UTC-9:30</string>
    <string name="utc_min9_time_zones_editText_text">UTC-9</string>
    <string name="utc_min8_time_zones_editText_text">UTC-8</string>
    <string name="utc_min7_time_zones_editText_text">UTC-7</string>
    <string name="utc_min6_time_zones_editText_text">UTC-6</string>
    <string name="utc_min5_time_zones_editText_text">UTC-5</string>
    <string name="utc_min4_time_zones_editText_text">UTC-4</string>
    <string name="utc_min3_time_zones_editText_text">UTC-3</string>
    <string name="utc_min2_30_time_zones_editText_text">UTC-2:30</string>
    <string name="utc_min2_time_zones_editText_text">UTC-2</string>
    <string name="utc_min1_time_zones_editText_text">UTC-1</string>
    <string name="utc_pl0_time_zones_editText_text">UTC+0</string>
    <string name="utc_pl1_time_zones_editText_text">UTC+1</string>
    <string name="utc_pl2_time_zones_editText_text">UTC+2</string>
    <string name="utc_pl3_time_zones_editText_text">UTC+3</string>
    <string name="utc_pl4_time_zones_editText_text">UTC+4</string>
    <string name="utc_pl4_30_time_zones_editText_text">UTC+4:30</string>
    <string name="utc_pl5_time_zones_editText_text">UTC+5</string>
    <string name="utc_pl5_30_time_zones_editText_text">UTC+5:30</string>
    <string name="utc_pl5_45_time_zones_editText_text">UTC+5:45</string>
    <string name="utc_pl6_time_zones_editText_text">UTC+6</string>
    <string name="utc_pl6_30_time_zones_editText_text">UTC+6:30</string>
    <string name="utc_pl7_time_zones_editText_text">UTC+7</string>
    <string name="utc_pl8_time_zones_editText_text">UTC+8</string>
    <string name="utc_pl8_45_time_zones_editText_text">UTC+8:45</string>
    <string name="utc_pl9_time_zones_editText_text">UTC+9</string>
    <string name="utc_pl9_30_time_zones_editText_text">UTC+9:30</string>
    <string name="utc_pl10_time_zones_editText_text">UTC+10</string>
    <string name="utc_pl10_30_time_zones_editText_text">UTC+10:30</string>
    <string name="utc_pl11_time_zones_editText_text">UTC+11</string>
    <string name="utc_pl12_time_zones_editText_text">UTC+12</string>
    <string name="utc_pl12_45_time_zones_editText_text">UTC+12:45</string>
    <string name="utc_pl13_time_zones_editText_text">UTC+13</string>
    <string name="utc_pl14_time_zones_editText_text">UTC+14</string>
    <string name="joule_energy_editText">J</string>
    <string name="ic_button_choose_description">Choose</string>
</resources>