<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/distanceFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackground"
    tools:context=".DistanceFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_choose">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_km_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/km_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton_choose" />

            <EditText
                android:id="@+id/editText_km_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/km_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_km_distance" />

            <TextView
                android:id="@+id/textView_m_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/m_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_km_distance" />

            <EditText
                android:id="@+id/editText_m_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/m_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_m_distance" />

            <TextView
                android:id="@+id/textView_dm_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/dm_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_m_distance" />

            <EditText
                android:id="@+id/editText_dm_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/dm_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_dm_distance" />

            <TextView
                android:id="@+id/textView_cm_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/cm_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_dm_distance" />

            <EditText
                android:id="@+id/editText_cm_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/cm_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_cm_distance" />

            <TextView
                android:id="@+id/textView_mm_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/mm_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_cm_distance" />

            <EditText
                android:id="@+id/editText_mm_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/mm_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_mm_distance" />

            <TextView
                android:id="@+id/textView_miles_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/miles_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_mm_distance" />

            <EditText
                android:id="@+id/editText_miles_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/miles_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_miles_distance" />

            <TextView
                android:id="@+id/textView_yard_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/yard_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_miles_distance" />

            <EditText
                android:id="@+id/editText_yard_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/yard_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_yard_distance" />

            <TextView
                android:id="@+id/textView_foot_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/foot_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_yard_distance" />

            <EditText
                android:id="@+id/editText_foot_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/foot_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_yard_distance" />

            <TextView
                android:id="@+id/textView_seaMile_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/seaMile_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_foot_distance" />

            <EditText
                android:id="@+id/editText_seaMile_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/seaMile_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_seaMile_distance" />

            <TextView
                android:id="@+id/textView_inch_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/inch_distance_textView_text"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_seaMile_distance" />

            <EditText
                android:id="@+id/editText_inch_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:autofillHints="none"
                android:ems="10"
                android:hint="@string/inch_distance_editText"
                android:inputType="numberSigned|numberDecimal"
                android:imeOptions="actionDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_inch_distance" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/standard_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>